--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: checkout
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
     - name: build image
       run: docker build . --file Dockerfile --tag acidrs/ftbskies2:latest
     - name: push image to docker hub
