--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -13,7 +13,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
     - name: build image
-      run: docker build . --file Dockerfile --tag acidrs/ftbskies2:latest
+      run: docker build . --file Dockerfile -t acidrs/ftbskies2:latest
     - name: push image to docker hub
       run: 
         docker login -u acidrs -p ${{ secrets.DOCKER_HUB_TOKEN }}
