--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-A Modded Java Minecraft server container for Unraid that runs FTB Skies.
+A Modded Java Minecraft server container for Unraid that runs FTB Skies 2.
