--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -18,3 +18,4 @@ jobs:
       run: |
         docker login -u acidrs -p ${{ secrets.DOCKER_HUB_TOKEN }}
         docker push acidrs/ftbskies2:latest
+        docker push acidrs/ftbskies2:1.3.1
