--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -13,7 +13,8 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
     - name: build image
-      run: DOCKER_BUILDKIT=1 docker build --no-cache . --file Dockerfile -t acidrs/ftbskies2:latest
+      run: DOCKER_BUILDKIT=1 docker build --no-cache . --file Dockerfile -t acidrs/ftbskies2:latest |
+        docker build --no-cache . --file Dockerfile -t acidrs/ftbskies2:1.3.1
     - name: push image to docker hub
       run: |
         docker login -u acidrs -p ${{ secrets.DOCKER_HUB_TOKEN }}
